--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="Create">Crear Producto</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Recommendation" asp-action="Recommend">Recomendaciones</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
